# dfd-lab

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  evaluate.py  preprocess.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: pylint.yml
configs/: evaluation.yaml  preprocessing.yaml  training.yaml
docs/: LMDB_STORAGE.md  models.md  webdataset.md
scripts/: evaluate.py  preprocess.py  train_with_shards.py  view_shards.py
src/data/: base_preprocessor.py  dataset.py  fakeavceleb_preprocessor.py  lmdb_storage.py  preprocessing.py  shard_dataset.py  shard_writer.py
src/models/: AVFF.py  AVFF_encoder.py  base.py  cnn_lstm.py  xception.py
src/training/: metrics.py  trainer.py
src/utils/: display_frame.py  lmdb_utils.py
tests/: test_lmdb_storage.py
